# fault-injection-library

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  TODO.md  findus.py  mkdocs.yml  patch  pyproject.toml  requirements-mkdocs.txt  requirements.txt  setup.py
blink/: mpBlink.py  mp_blink.py  test.py
docs/: Makefile  adc.md  analog_plot.md  analogplot.md  api.rst  bootloadercom.md  cli.md  code.md  conf.py  customize.md  debug_interface.md  debuginterface.md  examples.md  external_power_supply.md  findus.md  findus.rst  findus_index.rst  genalgorithm.md  genetic.md  genetic_algorithm.md  getting_started.md  glitch_state.md  glitches.md  index.md  index.rst  interactive_pchip_editor.md  mpglitcher.md  multiplexing.md  overview.md  pico_glitcher.md  picoglitcher.md  pulse_shaping.md  schmitt.md  sourcecode.md  versions.md
docs/source/: findus.rst  modules.rst
example/: CMD  calibration.py  pico-glitcher-multiplexing-optimization.py  pico-glitcher-multiplexing.py  pico-glitcher-pulse-shaping-optimization.py  pico-glitcher-pulse-shaping.py  pico-glitcher-uart-trigger.py  pico-glitcher.py
examples/: CMD  one-second-challenge.py  pico-glitcher-edge-counter.py  pico-glitcher-multiplexing-optimization.py  pico-glitcher-multiplexing.py  pico-glitcher-power-cycling.py  pico-glitcher-pulse-shaping-optimization.py  pico-glitcher-pulse-shaping.py  pico-glitcher-uart-trigger.py  pico-glitcher.py  pro-glitcher.py
findus/: AD910X.py  AnalogPlot.py  BootloaderCom.py  DebugInterface.py  ExternalPowerSupply.py  GeneticAlgorithm.py  GlitchState.py  HuskyGlitcher.py  InteractivePchipEditor.py  ProGlitcher.py  PulseGenerator.py  STLinkInterface.py  STM32Bootloader.py  STM8Programmer.py  __init__.py  findus.py  mpGlitcher.py  pyboard.py
findus/analyzer/: README.md  analyzer.py  analyzer_new.py
findus/firmware/: AD910X.py  FastADC.py  Globals.py  PicoGlitcher.py  PicoGlitcher_.py  PulseGenerator.py  Spline.py  Statemachines.py  __init__.py  decorators.py  mpGlitcher.py  test.py
findus/helper/: cleanup.sh  database_tool.py  old-code.py  power_cycle.py  power_cycle_and_read.py  power_on.py  pulse_shaping_calibration.py  stm32_power_cycle_and_read.py  update_firmware.py  upload.py  upload_new.py
findus/mpConfig_v1/: config.json  mpConfig.py
findus/mpConfig_v2/: config.json  mpConfig.py
helper/: dump-memory.py  power-cycle-and-read.py  power-cycle.py  upload-micro-python.py
lib/: BootloaderCom.py  FaultInjectionLib.py  GlitchState.py  mpGlitcher.py  mp_glitcher.py  upload-micro-python.py
nrf52832-glitching/: nrf52832-glitching.py
pico-glitcher/: bootloader_com.py  mp_glitcher.py  pico-glitcher.py
pico-glitcher/schematics/: pico-glitcher-v1 v22.csv
projects/atmega328p/: Makefile  README.md  blink.c  mega328p-glitcher.py
projects/esp32v1.3/: esp32v1.3-glitcher-pulse-shaping.py  esp32v1.3-glitcher.py
projects/esp32v1.3-glitching/: esp32v1.3-glitcher-pulse-shaping.py  esp32v1.3-glitcher.py  pico-glitcher.py
projects/lpc1311/: lpc1311-glitching.py
projects/lpc1311-glitching/: lpc1311-glitching.py
projects/nrf52832/: README.md  nrf52832-glitching.py
projects/nrf52832-glitching/: README.md  nrf52832-glitching.py
projects/rp2040/: rp2040-glitching.py
projects/rp2040-glitching/: rp2040-glitching.py
projects/rp2040-glitching/rpi-program/: CMakeLists.txt  README.md  configure.sh  main.cpp
projects/rp2350/: rpi2350-glitching.py
projects/rp2350-glitching/: interface.cfg  rpi2350-glitching.py  target.cfg
projects/stm32f205/: README.md  stm32f2-boot-debugger+bootloader-stage-2.py  stm32f2-boot-debugger.py  stm32f2-bootloader-memread.py
projects/stm32f40x/: README.md  stm32f4-glitching-shorter-timeouts.py  stm32f4-glitching.py
projects/stm32f40x-glitching/: README.md  pro-glitcher.py  stm32f4-glitching.py
projects/stm32f412/: README.md
projects/stm32f412-glitching/: README.md
projects/stm32f42x/: GPIO_IOToggle.elf  README.md  pico-glitcher.py  pro-glitcher.py
projects/stm32f42x-glitching/: README.md  pico-glitcher.py  pro-glitcher.py
projects/stm32l05x/: CMD  rdp-downgrade-stm32l051.elf  stm32l0-rdp-downgrade.py  stm32l0-readmemory.py  toggle-led-stm32l051.elf
projects/stm32l422/: rdp-downgrade-STM32L0.elf  rdp-downgrade-stm32l422.elf  register-brute-force.py  stm32l4-rdp-downgrade.py  toggle-led-STM32L0.elf  toggle-led-stm32l422.elf
projects/stm8l/: stm8l-profiling.py  stm8l-readmemory.py
projects/stm8s/: README.md  stm8-readmemory.py
projects/stm8s-glitching/: CMD  README.md  stm8-readmemory.py
projects/test/: test-optimization.py
schematics/: example.fzz  example2.fzz  pico-glitcher-v1 v41.fsch  pico-glitcher-v1 v42.fsch  pico-glitcher-v1 v43.fsch  pico-glitcher-v1 v52_top_bom.csv  pico-glitcher-v1 v52_top_cpl.csv  pico-glitcher-v1 v87.fbrd  pico-glitcher-v1 v89.fbrd  pico-glitcher-v1-bom.csv  pico-glitcher-v1-bom.numbers  pico-glitcher-v1.1 v91.brd  pico-glitcher-v1.1-BOM.numbers  pico-glitcher-v1.1-BOM.xlsx  pico-glitcher-v1.1_v43.sch  pico-glitcher-v1.fbrd  pico-glitcher-v1.fsch
schematics/3d-models/: expansion-board-spacer-v1.1.3mf  expansion-board-spacer-v1.1.stl  expansion-board-spacer-v1.stl  pulse-shaping-soldering-aid-v1.1.stl  soldering-aid-v1.1.stl  soldering-aid-v2.1.stl  soldering-aid-v2.2.stl  soldering-aid-v2.4.stl  soldering-aid-v3.0.3mf  (+3 more)
stm32-glitching/: bootloader_com.py  pro-glitcher.py  stm32-glitching.py  test-database.py  test.py
stm32f4-glitching/: BootloaderCom.py  README.md  bootloader_com.py  cleanup.sh  pico-glitcher.py  power-cycle-and-read.py  power-cycle.py  pro-glitcher.py  test.py
stm32f42x-glitching/: README.md  pro-glitcher.py
stm32l0-glitching/: README.md  pico-glitcher.py  pro-glitcher.py  read-out-protection-test-CW308_STM32L0.elf
stm32l05x-glitching/: README.md  pico-glitcher.py
(+193 files in other folders)
